<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />



<item
    android:id="@+id/navigation_explore"
    android:icon="@drawable/ic_explore"
    android:title="Explore" />
<item
    android:id="@+id/navigation_connections"
    android:icon="@drawable/ic_connections"
    android:title="Connections" />
<item
    android:id="@+id/navigation_chat"
    android:icon="@drawable/ic_chat"
    android:title="Chat" />
<item
    android:id="@+id/navigation_contacts"
    android:icon="@drawable/ic_contacts"
    android:title="Contacts" />
<item
    android:id="@+id/navigation_groups"
    android:icon="@drawable/ic_groups"
    android:title="Groups" />

</menu>


